--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="tournament-manager">
-        <h1>PokerHome Utility - Gestor de Torneios de Poker</h1>
+        <h1>Gestor de Torneios de Poker</h1>
         <div class="player-registration">
             <label for="player-name">Nome do Jogador:</label>
             <input type="text" id="player-name" placeholder="Nome">
@@ -18,12 +18,21 @@
             <h2>Jogadores</h2>
             <ul id="players"></ul>
         </div>
+        <div class="chips-adjustment">
+            <label for="player-chips">Ajustar Fichas:</label>
+            <input type="number" id="player-chips" placeholder="Valor das Fichas">
+            <button onclick="adjustChips()">Ajustar</button>
+        </div>
         <div class="round-timer">
             <h2>Temporizador da Rodada</h2>
             <div id="timer">00:00</div>
             <button onclick="startTimer()">Iniciar</button>
             <button onclick="pauseTimer()">Pausar</button>
             <button onclick="resetTimer()">Reiniciar</button>
+        </div>
+        <div class="round-history">
+            <h2>Histórico de Rodadas</h2>
+            <ul id="rounds"></ul>
         </div>
     </div>
     <script src="script.js"></script>
