--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Gestor de Torneios de Poker</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="dark-theme">
     <div id="tournament-manager">
         <h1>Gestor de Torneios de Poker</h1>
+        <button id="toggle-theme" onclick="toggleTheme()">Alterar Tema</button>
         <div class="player-registration">
             <label for="player-name">Nome do Jogador:</label>
             <input type="text" id="player-name" placeholder="Nome">
@@ -33,6 +34,10 @@
         <div class="round-history">
             <h2>Histórico de Rodadas</h2>
             <ul id="rounds"></ul>
+        </div>
+        <div class="statistics">
+            <h2>Estatísticas</h2>
+            <div id="statistics-content"></div>
         </div>
     </div>
     <script src="script.js"></script>
